fix author avatar center align

--- a/style.css
+++ b/style.css
@@ -1196,7 +1196,7 @@ span.icon-love:before {
 		float: right;
 		padding: 6px 10px;
 		margin-top: 24px;
-		margin-right: 15px;
+		margin-right: 8px;
 		margin-bottom: 8px;
 		background-color: transparent;
 		background-image: none;
@@ -1603,6 +1603,9 @@ span.icon-love:before {
 	}
 	.author-content {margin-bottom: 0;}
 	.author-img.col-sm-4 { margin: 0 auto;}
+	.author-img.col-sm-3 { /* bs override */
+		margin: 0 auto;
+	}
 	
 	.info-link {
 		position: relative;
